<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/home_color"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentTop="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/returnIcon"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/left_icon"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/appNameTV"
            android:text="@string/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_weight="3"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/appName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="50sp"
            android:layout_marginRight="50sp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userProfileImg"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/profile_image"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:src="@drawable/default_profile_img" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_marginTop="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userFullNameET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:background="@drawable/square_border_default"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:singleLine="true"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginTop="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthDateET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/birth_date"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="@drawable/square_border_default"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                android:layout_marginTop="10sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userEmailET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/square_border_default"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="15sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/square_border_default"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60sp"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="15sp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPasswordConfirmationET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/square_border_default"
                    android:hint="@string/password_hint"
                    android:paddingStart="15sp"
                    android:paddingEnd="15sp"
                    android:singleLine="true"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:layout_gravity="center"
                android:text="@string/create_account"
                android:background="@drawable/button_default" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>